# Galois

./: CMakeLists.txt  Makefile  README.git  README.md
data/: get_mnist.sh  get_tinyshakespeare.sh
example/: CMakeLists.txt  charnn.cc  lenet.cc  mnist_mlp.cc  mnist_mlp_net.cc  mnist_mlp_path.cc  mnist_mlp_simple_boosting.cc  rnn.cc
include/galois/: base.h  filters.h  mlp_model.h  model.h  models.h  narray.h  narray_functors.cc  narray_functors.cpp  narray_functors.h  narray_functors.h_inl  net.h  optimizer.h  path.h  utils.h
include/galois/dataset/: chartxt.h  mnist.h
include/galois/filters/: convolution.h  cross_entropy.h  embedding.h  general_tanh.h  linear.h  max_pooling.h  tanh.h
include/galois/gfilters/: base_net.h  net.h  netbase.h  ordered_net.h  path.h
include/galois/models/: bi_seq_encoder_decoder.h  mlp.h  model.h  ordered_model.h  rnn.h  seq_encoder_decoder.h
src/: CMakeLists.txt  mlp_model.cc  model.cc  narray.cc  net.cc  path.cc
src/filters/: convolution.cc  cross_entropy.cc  cross_entropy.h  embedding.cc  general_tanh.cc  linear.cc  linear.h  max_pooling.cc  tanh.cc  tanh.h
src/gfilters/: net.cc  ordered_net.cc  path.cc
src/models/: bi_seq_encoder_decoder.cc  mlp.cc  model.cc  ordered_model.cc  rnn.cc  seq_encoder_decoder.cc
src/optimizers/: optimizer.h
test/: CMakeLists.txt  grad_check.cc  grad_check_net.cc  grad_check_path.cc  grad_check_rnn.cc
